--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,45 @@
+amqp==5.3.1
+anyio==4.11.0
 asgiref==3.10.0
+backoff==2.2.1
+billiard==4.2.2
+celery==5.5.3
+certifi==2025.10.5
+charset-normalizer==3.4.4
+click==8.3.0
+click-didyoumean==0.3.1
+click-plugins==1.1.1.2
+click-repl==0.3.0
+colorama==0.4.6
+cron_descriptor==2.0.6
 Django==5.2.7
+django-celery-beat==2.8.1
 django-crontab==0.7.1
 django-filter==25.2
+django-timezone-field==7.1
+gql==4.0.0
 graphene==3.4.3
 graphene-django==3.2.3
 graphql-core==3.2.6
 graphql-relay==3.2.0
+idna==3.11
+kombu==5.5.4
+multidict==6.7.0
+packaging==25.0
 promise==2.3
+prompt_toolkit==3.0.52
+propcache==0.4.1
+python-crontab==3.3.0
 python-dateutil==2.9.0.post0
+redis==7.0.1
+requests==2.32.5
 six==1.17.0
+sniffio==1.3.1
 sqlparse==0.5.3
 text-unidecode==1.3
 typing_extensions==4.15.0
 tzdata==2025.2
+urllib3==2.5.0
+vine==5.1.0
+wcwidth==0.2.14
+yarl==1.22.0
